--- a/style.css
+++ b/style.css
@@ -107,10 +107,10 @@ body:not(:has(nav input:checked)) #home {--c: #37373f; --c1: #4f4f5a;}
 @media screen and (max-width: 767px) {#chefs figure {width: 100%;}}
 #chefs figure:hover {scale: 1.07;}
 #chefs figure div {position: relative;}
-#chefs figure div::after {content: ''; background: url(files/team-shape.svg);
+#chefs figure div::after {content: ''; background: url(team-shape.svg);
   position: absolute; width: 100%; height: 60px; left: 0; bottom: -1px;}
 body:has(nav input:checked) #chefs figure div::after
-  {background: url(files/team-shape-dark.svg);}
+  {background: url(team-shape-dark.svg);}
 #chefs img {width: 100%; display: block;}
 #chefs figcaption {padding: 10px 25px 25px;}
 #chefs figure span {color: var(--c1); font-size: 14px; display: block; margin: 5px 0 10px;}
@@ -167,7 +167,7 @@ form input, [name='m'] {font-family: inherit; line-height: 1.5;
   outline: 0; border-radius: 24px; margin-top: 25px;}
 
 footer {background: linear-gradient(#0009,#0009),
-  url(files/textured-metal-background.jpg) 0/contain; color: #fff;
+  url(textured-metal-background.jpg) 0/contain; color: #fff;
   padding: 40px 0; box-shadow: 0 -1px 5px #0007;}
 footer .m {display: flex; flex-flow: wrap; --g: 20px; gap: var(--g);}
 .d0 {width: calc((100% - 2*var(--g))/4);}
